--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="row mt-4">
             <div class="col-lg">
                 <div class="slider-main">
-                    <div><img src="img/main1.jpg" width="100%"></div>
-                    <div><img src="img/main2.jpg" width="100%"></div>
-                    <div><img src="img/main3.jpg" width="100%"></div>
-                    <div><img src="img/main4.jpg" width="100%"></div>
+                    <div><img src="img/Main1.jpg" width="100%"></div>
+                    <div><img src="img/Main2.jpg" width="100%"></div>
+                    <div><img src="img/Main3.jpg" width="100%"></div>
+                    <div><img src="img/Main4.jpg" width="100%"></div>
                 </div>
             </div>
         </div>
